--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3827,7 +3827,7 @@ Digiland:
 
 # Digma
 Digma:
-  regex: 'Digma[_ ]([^;/]+) Build|HIT HT707[10]MG|CITI ATL 4G|CITI Octa 80|CITI 1902 3G|CITI Z530 3G|(CITI[_ ](?:[A-Z0-9]+)[_ ][34]G)[ _][TC][ST](11[459]4MG|1195MG|1196ML|3001ML|500[67]PG|7113PL|7193MG|8209MG|8139ML|8152ML|1050PL|8205PG|7203MG)|HIT 4G|HT7074ML|IDX5|(iDx10|iDx7)|MVM900H(?:WZ|C)|MVM908HCZ|(iDxD8 3G|iDxD10 3G|iDrQ10 3G|iDxD[45]|iDxQ5|iD[nx]D7(?:[_ ]3G)?)|PS604M|PT452E|LINX A420 3G LS4019PG|LINX A450 3G LT4028PG|Linx A400 3G LT4001PG|Linx C500 3G LT5001PG|Linx PS474S|LS504[01]PL|LT40(47|54)MG|LS405[01]MG|LS5053ML|LT5048MG|HT7071MG|LT5052ML|HT5035PG|HT4039PG|LT4049PG|NS6902QL|NS9797MG|TT1004PG|TT7025MG|((?:Optima|Platina|Plane)[ _](?:[EM])?(?:[0-9\.ST]+|Prime)(?:[ _][43]G)?)|(VOX[ _](?:[0-9\.A-Z]+)[_ ][43]G)'
+  regex: 'Digma[_ ]([^;/]+) Build|HIT HT707[10]MG|CITI ATL 4G|CITI Octa 80|CITI 1902 3G|CITI Z530 3G|(CITI[_ ](?:[A-Z0-9]+)[_ ][34]G)[ _][TC][ST](11[459]4MG|1195MG|1196ML|3001ML|500[67]PG|7113PL|7193MG|8209MG|8139ML|8152ML|1050PL|8205PG|7203MG)|HIT 4G|HT7074ML|IDX5|(iDx10|iDx7)|MVM900H(?:WZ|C)|MVM908HCZ|(iDxD8 3G|iDxD10 3G|iDrQ10 3G|iDxD[45]|iDxQ5|iD[nx]D7(?:[_ ]3G)?)|PS604M|PT452E|LINX B510 3G LT5037MG|LINX A452 3G LT4030PG|LINX A453 3G LT4038PG|LINX A420 3G LS4019PG|LINX A450 3G LT4028PG|Linx A400 3G LT4001PG|Linx C500 3G LT5001PG|Linx PS474S|LS504[01]PL|LT40(47|54)MG|LS405[01]MG|LS5053ML|LT5048MG|HT7071MG|LT5052ML|HT5035PG|HT4039PG|LT4049PG|NS6902QL|NS9797MG|TT1004PG|TT7025MG|((?:Optima|Platina|Plane)[ _](?:[EM])?(?:[0-9\.ST]+|Prime)(?:[ _][43]G)?)|(VOX[ _](?:[0-9\.A-Z]+)[_ ][43]G)'
   device: 'smartphone'
   models:
     - regex: 'HIT(?: 3G)? HT707[10]MG'
@@ -3863,7 +3863,7 @@ Digma:
       model: 'Linx Rage 4G'
     - regex: 'LS5053ML'
       model: 'Linx Pay 4G'
-    - regex: 'Linx ([A-Z][0-9]{3}) 3G (?:LT4028PG|LS4019PG|LT4001PG|LT5001PG)'
+    - regex: 'Linx ([A-Z][0-9]{3}) 3G (?:LT4028PG|LS4019PG|LT4001PG|LT5001PG|LT4038PG|LT5037MG|LT4030PG)'
       model: 'Linx $1 3G'
     - regex: '(Linx PS474S)'
       model: '$1'
@@ -6219,7 +6219,7 @@ iRulu:
 
 # Irbis
 Irbis:
-  regex: 'IRBIS|TZ(1(?:00|42|50|84|65|7[035-89]|9[578])|49|7(?:1[2467]|2[01567]|37|4[257]|5[23457]|62|72|7[17]|8[1]|9[47])|8(?:[34]1|5[3-8]|6[45]|7[2478]|8[1-5]|9[0127])|96[0-9])|TZ(?:one|art|HIT|81L)|(SP(?:0[56]|2[01]|4[1-36]|40[12]|45[345]|49[34]|50|51[0147]|531|54[12]|55[0124]|571))[;)\ ]'
+  regex: 'IRBIS|TZ(1(?:00|42|50|84|65|7[035-89]|8[36]|9[578])|49|7(?:1[2467]|2[01567]|37|4[257]|5[23457]|62|72|7[17]|8[1]|9[47])|8(?:[34]1|5[3-8]|6[45]|7[2478]|8[1-5]|9[0127])|96[0-9])|TZ(?:one|art|HIT|81L)|(SP(?:0[56]|2[01]|4[1-36]|40[12]|45[345]|49[34]|50|51[0147]|531|54[12]|55[0124]|571))[;)\ ]'
   device: 'tablet'
   models:
     - regex: '(TZ(?:[0-9]+)|TZ(?:one|art|HIT|81L))[;)\ ]'
@@ -9341,7 +9341,7 @@ O2:
 
 # Odys
 Odys:
-  regex: 'ODYS[ _-]|IEOS[_ ]([^/;]+)|NOON(?:_PRO)? Build|SPACE10_(?:PLUS|PRO)_3G|THOR_?10|TAO_X10|RAPID_?(?:10|7)_?LTE|MAVEN_?10_|CONNECT[78]|ELEMENT10_PLUS_3G|XELIO[_0-9P]|ADM816HC|ADM8000KP|NEO6_LTE|EOS10|AEON|FALCON_10_PLUS_3G|FUSION|THANOS_10'
+  regex: 'ODYS[ _-]|IEOS[_ ]([^/;]+)|NOON(?:_PRO)? Build|SPACE10_(?:PLUS|PRO)_3G|THOR_?10|TAO_X10|RAPID_?(?:10|7)_?LTE|MAVEN_?10_|CONNECT[78]|ELEMENT10_PLUS_3G|XELIO[_0-9P]|ADM816HC|ADM8000KP|NEO6_LTE|EOS10|AEON|FALCON_10_PLUS_3G|FUSION|THANOS_10|MAVEN_X10_HD(?:_LTE)?'
   device: 'tablet'
   models:
     - regex: 'XELIO[_ ]A10'
@@ -9364,6 +9364,10 @@ Odys:
       model: 'Connect 8 Plus'
     - regex: 'CONNECT7PRO'
       model: 'Connect 7 Pro'
+    - regex: 'MAVEN_X10_HD_LTE'
+      model: 'Maven X10 HD LTE'
+    - regex: 'MAVEN_X10_HD'
+      model: 'Maven X10 HD'
     - regex: 'MAVEN_?10_PRO_PLUS_3G'
       model: 'Maven 10 Pro Plus 3G'
     - regex: 'MAVEN_?10_?PLUS'
@@ -9452,7 +9456,7 @@ Obi:
 
 # onda
 Onda:
-  regex: 'Onda|(?:V820w|V891[w]?|V919(?: 3G)? Air)[ _-]DualOS|(?:V919 4G Air|V989 Air) Core8|T2101L2B1C'
+  regex: 'Onda|(?:(?:V820w|V891[w]?|V919(?: 3G)? Air)[ _-]DualOS|(?:V919 4G Air|V989 Air) Core8|T2101L2B1C| V10 4G)[);/ ]'
   device: 'smartphone'
   models:
     # explicit tablet models
@@ -9482,6 +9486,9 @@ Onda:
       device: 'tablet'
     - regex: 'T2101L2B1C'
       model: 'oBook 20 Plus DualOS'
+      device: 'tablet'
+    - regex: ' V10 4G[);/ ]'
+      model: 'V10 10.1" 4G'
       device: 'tablet'
 
     - regex: '([a-z0-9]+)[ _]Onda'
@@ -9859,14 +9866,18 @@ Ouki:
 
 # Oukitel
 Oukitel:
-  regex: '(?:(?:C15|C16|K10000|K6000)(?:[ _]Pro)|U20_Plus|K4000 Plus|Y4800|K10000|K[67]000)[ ;/)]'
+  regex: '(?:(?:C15|C16|K10000|K6000)(?:[ _]Pro)|U20_Plus|K[46]000[ _](?:Plus|Lite)|Y4800|K10000|K[567]000)[ ;/)]'
   device: 'smartphone'
   models:
     - regex: '(C15|C16|K10000|K6000)[ _]Pro[ ;/)]'
       model: '$1 Pro'
-    - regex: '(U20|K4000)[_ ]Plus[ ;/)]'
+    - regex: '(K10000)[ _]Max[ ;/)]'
+      model: '$1 Max'
+    - regex: '(U20|K[46]000)[_ ]Plus[ ;/)]'
       model: '$1 Plus'
-    - regex: '(Y4800|K10000|K[67]000)[ ;/)]'
+    - regex: '(K4000)[_ ]Lite[ ;/)]'
+      model: '$1 Lite'
+    - regex: '(Y4800|K10000|K[567]000)[ ;/)]'
       model: '$1'
 
 # Overmax
@@ -11961,11 +11972,13 @@ Turbo-X:
 
 # Turbo
 Turbo:
-  regex: 'Turbo[_ ]?(?:X5[_ ]?(?:Max|Black|Space)|X8|X6[ _]Z)[);/ ]'
+  regex: 'Turbo[_ ]?(?:X5[_ ]?(?:Max|Black|Space)|X8|X6[ _]Z|X[ _]Ray)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'TurboX5Space[);/ ]'
       model: 'X5 Space'
+    - regex: 'TurboX[ _]Ray[);/ ]'
+      model: 'X Ray'
     - regex: 'Turbo[ _]?X5[ _]?Black[);/ ]'
       model: 'X5 Black'
     - regex: 'Turbo[ _]X5[ _]Max[);/ ]'
@@ -12385,7 +12398,7 @@ Tesco:
 
 # teXet
 teXet:
-  regex: 'Texet|(NaviPad [^/;]*) Build|TM-(?:1046|1058|1057|1067|3000|3200R|3500|4003|4071|450[34]|451[30]|4377|4082R|550[83]|5010|5017|507[4-7]|5[23]77|6003|6906|702[13]|7055HD|709[69]|9747BT|9758|9751HD|9767|5513|520[410]|5505|507[13]|5581|7859|8044|9748[ _]3G|9720|7047HD[ _]3G|9757|9740|4982|4515|4083|500[3567]|5571|3204R|5016|8043|7047HD[ _]3G|8041HD|8066|705[23]|7041|8041HD|8051|8048|974[96]|973[78]W|974[170]|9743W|9750HD|7043XD|7049|7887|7037W|702[46])|TB-(771A|711A)|X-Force[\(-]?TM-5009\)?|X-Plus[\(-]?TM-5577\)?|X-pad (?:AIR 8|iX 7|NAVI 7.[35]|NAVI 10|SKY 8.1|STYLE 8|STYLE 10.1|HIT|LITE 7.[12]|QUAD (?:7.2|10|7)|SHINE 8.1)(?: 3G)?'
+  regex: 'Texet|(NaviPad [^/;]*) Build|TM-(?:1046|1058|1057|1067|3000|3200R|3500|4003|4071|450[34]|451[30]|4377|4082R|550[83]|5010|5017|507[4-7]|5[23]77|6003|6906|702[13]|7055HD|709[69]|9747BT|9758|9751HD|9767|5513|520[410]|5505|507[13]|5581|7859|8044|9748[ _]3G|9720|7047HD[ _]3G|9757|9740|4982|4515|4083|500[3567]|5571|3204R|5016|8043|7047HD[ _]3G|8041HD|8066|705[23]|7041|8041HD|8051|8048|974[96]|973[78]W|974[170]|9743W|9750HD|7043XD|7049|7887|7037W|702[46])|TB-(771A|711A)|X-Force[\(-]?TM-5009\)?|X-Plus[\(-]?TM-5577\)?|TM_5011|X-pad (?:AIR 8|iX 7|NAVI 7.[35]|NAVI 10|SKY 8.1|STYLE 8|STYLE 10.1|HIT|LITE 7.[12]|QUAD (?:7.2|10|7)|SHINE 8.1)(?: 3G)?'
   device: 'tablet'
   models:
     - regex: 'TM-9749'
@@ -12456,6 +12469,9 @@ teXet:
     - regex: 'TM-5007'
       device: 'smartphone'
       model: 'X-Shine'
+    - regex: 'TM_5011'
+      device: 'smartphone'
+      model: 'X-Omega'
     - regex: 'TM-5201'
       device: 'smartphone'
       model: 'Rock'
@@ -16164,11 +16180,13 @@ Billion:
 
 # Tele2 (mobile operator)
 Tele2:
-  regex: 'Tele2[ _](?:Mi[dn]i[ _]1[\._]1|Mi[dn]i|Maxi(?:[ _](?:Plus|LTE))?)[);/ ]'
+  regex: 'Tele2[ _](?:Mi[dn]i[ _][12][\._][10]|Mi[dn]i|Maxi(?:[ _](?:Plus|LTE))?)[);/ ]'
   device: 'smartphone'
   models:
       - regex: 'Tele2[ _]Mini[ _]1[_\.]1[);/ ]'
         model: 'Mini 1.1'
+      - regex: 'Tele2[ _]Midi[ _]2[_\.]0[);/ ]'
+        model: 'Midi 2.0'
       - regex: 'Tele2[ _](Maxi(?:[_ ](?:Plus|LTE))?)[);/ ]'
         model: '$1'
       - regex: 'Tele2[ _](Midi[ _]1\.1|Mi[dn]i)[);/ ]'
