--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15076,11 +15076,13 @@ NEXBOX:
 
 # True
 'True':
-  regex: 'SMART[ _](MAX 4.0 PLUS|4G Speedy 5.0 Plus|4G[_ ]Speedy[_ ]5inch)'
+  regex: 'SMART[ _](MAX 4.0 PLUS|4G GEN C [45].[05]|4G Speedy 5.0 Plus|4G[_ ]Speedy[_ ]5inch)'
   device: 'smartphone'
   models:
     - regex: 'SMART MAX 4.0 PLUS'
       model: 'Smart Max 4.0 Plus'
+    - regex: 'SMART 4G Gen C ([45].[05])'
+      model: 'Smart 4G Gen C $1"'
     - regex: 'SMART 4G Speedy 5.0 Plus'
       model: 'Smart 4G Speedy 5.0 Plus'
     - regex: 'SMART[ _]4G[_ ]Speedy[_ ]5inch'
