--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -1379,3 +1379,443 @@
     model: One A9
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 40FK30G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/75.0.3770.101 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 75.0.3770.101
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: KV
+    model: 40FK30G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 40FR50BR Build/M5C14J) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/50.0.2661.89 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 50.0.2661.89
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: KV
+    model: 40FR50BR
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 43UK35G Build/M5C14J; uk-ua) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/69.0.3497.100 Mobile Safari/537.36 Puffin/7.8.2.40664AP
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Puffin
+    short_name: PU
+    version: 7.8.2.40664
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tv
+    brand: KV
+    model: 43UK35G
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 50FK30G Build/M5C14J) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.157 Safari/537.36 OPR/53.0.2569.141117
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: 53.0.2569.141117
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: KV
+    model: 50FK30G
+  os_family: Android
+  browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 50UK35G Build/M5C14J; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/48.0.2542.0 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 48.0.2542.0
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: KV
+    model: 50UK35G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 55UC30G_-Ver02 Build/M5C14J) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.158 Safari/537.36 OPR/47.0.2249.129167
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: 47.0.2249.129167
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: KV
+    model: 55UC30G v2
+  os_family: Android
+  browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 40FK30G_-Ver02) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.116 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 77.0.3865.116
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: KV
+    model: 40FK30G v2
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 43UK30G_-Ver01) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.92 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 77.0.3865.92
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: KV
+    model: 43UK30G v1
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 43UK30G_-Ver02 Build/M5C14J) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/50.0.2661.89 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 50.0.2661.89
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: KV
+    model: 43UK30G v2
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 32HR50GU_-Ver01) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.111 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 76.0.3809.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: KV
+    model: 32HR50GU v1
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 32HR50GR_-Ver02) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.92 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 77.0.3865.92
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: KV
+    model: 32HR50GR v2
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 32HR50GR) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.92 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 77.0.3865.92
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: KV
+    model: 32HR50GR
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 32HK30G_-Ver01 Build/M5C14J) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/64.0.3282.123 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 64.0.3282.123
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: KV
+    model: 32HK30G v1
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 32FR50WR) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.132 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 76.0.3809.132
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: KV
+    model: 32FR50WR
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 32FR50BU) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.108 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 78.0.3904.108
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: KV
+    model: 32FR50BU
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 32FK30G Build/M5C14J) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.106 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 66.0.3359.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: KV
+    model: 32FK30G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 32FK32G_-Ver01 Build/M5C14J) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.121 Safari/537.36 OPR/51.3.2461.138727
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: 51.3.2461.138727
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: KV
+    model: 32FK32G v1
+  os_family: Android
+  browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 32FK32G Build/M5C14J; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/48.0.2542.0 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 48.0.2542.0
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: KV
+    model: 32FK32G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 24HK30B) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.116 Safari/537.36 OPR/55.2.2719.50740
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: 55.2.2719.50740
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: KV
+    model: 24HK30B
+  os_family: Android
+  browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 24DHS54 Build/M5C14J; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/48.0.2542.0 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 48.0.2542.0
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: DF
+    model: 24DHS54
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; 24FR50WU) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.79 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 79.0.3945.79
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: KV
+    model: 24FR50WU
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.0; T102ER3G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.136 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 79.0.3945.136
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: OY
+    model: T102ER 3G
+  os_family: Android
+  browser_family: Chrome
